--- a/style/seat-selection.css
+++ b/style/seat-selection.css
@@ -9,6 +9,7 @@
   --text-dark: #35265c;
   --text-light: #5d5e84;
   --primary-color: #87b3ea;
+  --bg-light: #f5f9ff;
 }
 
 * {
@@ -18,6 +19,7 @@
 }
 
 body {
+  background: var(--bg-light);
   text-align: center;
   font-family: "Noto Serif", sans-serif;
   color: var(--text-dark);
@@ -44,7 +46,6 @@ h1 {
   margin: 20px auto; 
   width: fit-content; 
   backdrop-filter: blur(6px); 
-  border: 1.5px solid rgba(135, 179, 234, 0.5); 
   color: var(--text-dark); 
   font-size: 16px;
 }
