--- a/src/style/booking.css
+++ b/src/style/booking.css
@@ -57,7 +57,6 @@ h1 {
   box-sizing: border-box;
   gap: 40px;
 }
-
 .flight-card:hover {
   transform: translateY(-4px);
 }
@@ -72,13 +71,16 @@ h1 {
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+  font-size: larger;
   color: var(--text-dark);
   margin-bottom: 0.5rem;
+  padding-top: 1rem;
   padding-right: 0;
 }
 
 .depart {
   text-align: left;
+  justify-content: space-between;
 }
 
 .arrive {
@@ -170,14 +172,14 @@ h1 {
 .logo {
   text-decoration: none;
   display: flex;
-  align-items: center;   
-  gap: 20px;             
+  align-items: center;
+  gap: 20px;
 }
 
 .logo img {
   height: 40px;
   width: auto;
-  transform: scale(1.5);     
+  transform: scale(1.5);
   transform-origin: left center;
 }
 
@@ -189,15 +191,15 @@ h1 {
 }
 
 .site-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    padding: 12px 40px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-    margin-bottom: 1.5rem;
-    background-color: var(--header-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  padding: 12px 40px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  margin-bottom: 1.5rem;
+  background-color: var(--header-color);
 }
